gthread: Fix a typo in an #ifdef on the non-native mutex path

This seems to have been present since the code was introduced in commit
cedc82290f860683d695d0c5326db153893eec21. The attr variable is defined
under one #ifdef, but destroyed under another, which doesn’t make any
sense. The second #ifdef variable is actually an enum value, rather than
the static initialiser value which makes more sense in the context.

Note that GMutex used to be statically initialised to the value of
PTHREAD_ADAPTIVE_MUTEX_INITIALIZER_NP in gthread.h, before this was
reworked in commit e081eadda598bc708fbf9dd53a190fc3b0e7fa76.

Signed-off-by: Philip Withnall <withnall@endlessm.com>

https://bugzilla.gnome.org/show_bug.cgi?id=793026